Archive2/6f/ad86192f6f77fa/output
main.cpp: In function 'void foo(const int* const*)':
main.cpp:5:12: error: assignment of read-only location '* ptr'
       *ptr = &x;
            ^
